--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-flask
-pandas
-scikit-learn
-numpy
-requests
-python-dotenv
-flask-cors
-gunicorn 
+flask==2.0.1
+pandas==1.3.3
+scikit-learn==0.24.2
+numpy==1.21.2
+requests==2.26.0
+python-dotenv==0.19.0
+flask-cors==3.0.10
+gunicorn==20.1.0
+joblib==1.0.1 
