--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 flask==2.0.1
-pandas==1.3.3
-scikit-learn==0.24.2
-numpy==1.21.2
-requests==2.26.0
-python-dotenv==0.19.0
+pandas==1.5.3
+scikit-learn==1.0.2
+numpy==1.23.5
+requests==2.28.2
+python-dotenv==0.21.1
 flask-cors==3.0.10
 gunicorn==20.1.0
-joblib==1.0.1 
+joblib==1.2.0
+Werkzeug==2.0.3
+click==8.0.4
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1 
