--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
             "use": "@vercel/python",
             "config": {
                 "maxLambdaSize": "15mb",
-                "runtime": "python3.9"
+                "runtime": "python3.9",
+                "buildCommand": "pip install -r requirements.txt"
             }
         }
     ],
@@ -17,6 +18,7 @@
         }
     ],
     "env": {
-        "PYTHONPATH": "."
+        "PYTHONPATH": ".",
+        "PYTHON_VERSION": "3.9"
     }
 } 
