--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-flask==2.0.1
-pandas==1.3.5
-scikit-learn==1.0.2
-numpy==1.21.6
+flask==2.0.1; python_version < "3.10"
+pandas==1.3.5; python_version < "3.10"
+scikit-learn==1.0.2; python_version < "3.10"
+numpy==1.21.6; python_version < "3.10"
 requests==2.28.2
 python-dotenv==0.21.1
 flask-cors==3.0.10
 gunicorn==20.1.0
-joblib==1.1.0
+joblib==1.1.0; python_version < "3.10"
 Werkzeug==2.0.3
 click==8.0.4
 itsdangerous==2.0.1
