--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
             "config": {
                 "maxLambdaSize": "15mb",
                 "runtime": "python3.9",
-                "buildCommand": "pip install -r requirements.txt"
+                "buildCommand": "chmod +x build.sh && ./build.sh"
             }
         }
     ],
@@ -19,6 +19,7 @@
     ],
     "env": {
         "PYTHONPATH": ".",
-        "PYTHON_VERSION": "3.9"
+        "PYTHON_VERSION": "3.9",
+        "PYTHONUNBUFFERED": "1"
     }
 } 
