--- a/vercel.json
+++ b/vercel.json
@@ -21,6 +21,7 @@
         }
     ],
     "env": {
-        "PYTHONUNBUFFERED": "1"
+        "PYTHONUNBUFFERED": "1",
+        "PYTHON_VERSION": "3.9"
     }
 } 
