--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "app.py",
+            "src": "wsgi.py",
             "use": "@vercel/python",
             "config": {
                 "maxLambdaSize": "250mb",
@@ -17,7 +17,7 @@
         },
         {
             "src": "/(.*)",
-            "dest": "/app.py"
+            "dest": "/wsgi.py"
         }
     ],
     "env": {
